--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.5/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='trackingMethod: best;'>
-      <a-gltf-model src="https://raw.githubusercontent.com/prashant-andani/3d-models/master/boat/scene.gltf"></a-gltf-model>
-      <a-marker-camera preset='hiro'></a-marker-camera>
+      <a-assets>
+          <a-asset-item id="cityModel" src="https://cdn.jsdelivr.net/gh/kapilpau/ar/boat.gltf"></a-asset-item>
+        </a-assets>
+        <a-entity gltf-model="#cityModel" modify-materials></a-entity>      <a-marker-camera preset='hiro'></a-marker-camera>
       <a-camera-static/>
     </a-scene>
 </body>
