--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs='trackingMethod: best;'>
       <a-assets>
-          <a-asset-item id="cityModel" src="https://cdn.jsdelivr.net/gh/kapilpau/ar/boat.gltf"></a-asset-item>
         </a-assets>
-        <a-entity gltf-model="#cityModel" modify-materials></a-entity>      <a-marker-camera preset='hiro'></a-marker-camera>
+        <a-entity obj-model="obj: url(http://localhost:8000/eb_house_plant_01.obj); mtl: url(http://localhost:8000/eb_house_plant_01.mtl)" modify-materials></a-entity>      <a-marker-camera preset='hiro'></a-marker-camera>
       <a-camera-static/>
     </a-scene>
 </body>
