--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <a-scene embedded arjs='trackingMethod: best;'>
       <a-assets>
         </a-assets>
-        <a-entity obj-model="obj: url(http://localhost:8000/eb_house_plant_01.obj); mtl: url(http://localhost:8000/eb_house_plant_01.mtl)" modify-materials></a-entity>      <a-marker-camera preset='hiro'></a-marker-camera>
+        <a-entity obj-model="obj: url(https://cdn.jsdelivr.net/gh/kapilpau/ar/eb_house_plant_01.obj); mtl: url(https://cdn.jsdelivr.net/gh/kapilpau/ar/eb_house_plant_01.mtl)" modify-materials></a-entity>      <a-marker-camera preset='hiro'></a-marker-camera>
       <a-camera-static/>
     </a-scene>
 </body>
